Refactor database connection and update fetch/store functions for improved error handling

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 COINMARKETCAP_API_KEY=9442e7d5-062a-4652-8a4e-51495434aed2
 DB_NAME=cryptodb
 DB_USER=postgres
-DB_PASSWORD=admin
+DB_PASSWORD=mentee
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5433
