--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_USER=postgres
 DB_PASSWORD=mentee
 DB_HOST=localhost
 DB_PORT=5433
+GROQ_API_KEY=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
