--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ sqlalchemy
 pydantic-ai
 seaborn
 numpy
+langchain-core==0.2.9
+langchain-community==0.2.5
+'crewai[tools]'==0.32.0
+langchain-groq==0.1.5
