--- a/requirements.txt
+++ b/requirements.txt
@@ -67,8 +67,8 @@ idna==3.10
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
 instructor==1.11.3
-ipython==9.1.0
-ipython_pygments_lexers==1.1.1
+ipython
+ipython_pygments_lexers
 jedi==0.19.2
 Jinja2==3.1.6
 jiter==0.8.2
