Remove redundant '-m' flag from collect_data command

--- a/.github/data_collection.yml
+++ b/.github/data_collection.yml
@@ -42,4 +42,4 @@ jobs:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_NAME: ${{ secrets.DB_NAME }}
         run: |
-          python -m src.collect_data.py BTC ETH BNB USDT SOL XRP USDC ADA DOGE TON AVAX SHIB DOT TRX WBTC LINK MATIC NEAR LTC BCH ICP DAI UNI ETC LEO STETH XMR OKB FIL CRO APT LDO INJ RUNE ARB HBAR MKR QNT AAVE SUI OP XLM ENS GRT AXS FLOW KAS XTZ SNX EOS --max-rows 200
+          python -m src.collect_data BTC ETH BNB USDT SOL XRP USDC ADA DOGE TON AVAX SHIB DOT TRX WBTC LINK MATIC NEAR LTC BCH ICP DAI UNI ETC LEO STETH XMR OKB FIL CRO APT LDO INJ RUNE ARB HBAR MKR QNT AAVE SUI OP XLM ENS GRT AXS FLOW KAS XTZ SNX EOS --max-rows 200
